tried removing s from https

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://muhdmirzamz.github.io/ReactTodoList",
+  "homepage": "http://muhdmirzamz.github.io/ReactTodoList",
   "name": "react-todo-list",
   "version": "0.1.0",
   "private": true,
